[workspace]
resolver = "3"
members = ["crates/releasaurus", "crates/releasaurus-core"]

[workspace.package]
edition = "2024"
description = "A comprehensive release automation tool that streamlines the software release process across multiple programming languages and forge platforms"
homepage = "https://releasaurus.rgon.io"
repository = "https://github.com/robgonnella/releasaurus"
license = "MIT OR Apache-2.0"
keywords = ["changelog", "commits", "conventional", "release", "semver"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
git-url-parse = "0.4.6"
secrecy = "0.10.3"
