[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
description = "A comprehensive release automation tool that streamlines the software release process across multiple programming languages and forge platforms"
homepage = "https://releasaurus.rgon.io"
repository = "https://github.com/robgonnella/releasaurus"
license = "MIT OR Apache-2.0"
keywords = ["changelog", "commits", "conventional", "release", "semver"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
color-eyre = "0.6.5"
log = "0.4.29"
merge = "0.2.0"
secrecy = "0.10.3"
serde = "1.0.228"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
tokio = { version = "1.52.1", features = ["fs", "macros", "rt-multi-thread"] }
