[package]
name = "releasaurus-core"
version = "0.18.0-rc.2"
edition.workspace = true
description.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = ["src/bin/gen_schema.rs"]

[package.metadata.cargo-machete]
ignored = ["openssl"]

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = "0.4.44"
color-eyre.workspace = true
derive_builder = "0.20.2"
futures-util = "0.3.32"
git-conventional = "1.1.0"
git2 = "0.20.4"
gitlab = "0.1810.0"
graphql_client = "0.14.0"
log.workspace = true
md5 = "0.8.0"
merge.workspace = true
next_version = "0.3.1"
octocrab = { version = "0.49.7", features = ["stream"] }
openssl = { version = "0.10.78", features = ["vendored"] }
quick-xml = "0.39.2"
regex = "1.12.3"
reqwest = "0.13.2"
rustls = { version = "0.23", default-features = false }
schemars = "1.2.1"
secrecy.workspace = true
semver = "1.0.28"
serde.workspace = true
serde_json.workspace = true
strum = { version = "0.28.0", features = ["derive"] }
tera = "1.20.1"
thiserror = "2.0.18"
tl = "0.7.8"
tokio.workspace = true
toml = "1.1.2"
toml_edit = "0.25.11"
url = "2.5.8"

[dev-dependencies]
mockall = "0.14.0"
temp-env = "0.3.6"
tempfile = "3.27.0"
test-log = "0.2.20"

[features]
default = []
_integration_tests = []
