[package]
name = "releasaurus-core"
version = "0.16.0"
edition = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = "README.md"
exclude = ["src/bin/gen_schema.rs"]

[package.metadata.cargo-machete]
ignored = ["openssl"]

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = "0.4.44"
color-eyre = "0.6.5"
derive_builder = "0.20.2"
futures-util = "0.3.31"
git-conventional = "0.12.9"
git2 = "0.20.2"
gitlab = "0.1807.0"
graphql_client = "0.14.0"
log = "0.4.29"
md5 = "0.8.0"
merge = "0.2.0"
next_version = "0.2.24"
octocrab = { version = "0.49.5", features = ["stream"] }
openssl = { version = "0.10.75", features = ["vendored"] }
quick-xml = "0.36.2"
regex = "1.11.1"
reqwest = "0.12.24"
schemars = "1.1.0"
secrecy = { workspace = true }
semver = "1.0.26"
serde = "1.0.228"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
strum = { version = "0.28.0", features = ["derive"] }
tera = "1.20.0"
thiserror = "2.0.9"
tokio = { version = "1.50.0", features = ["fs", "macros", "rt-multi-thread"] }
toml = "0.9.5"
toml_edit = "0.23.4"
url = "2.5"

[dev-dependencies]
mockall = "0.14.0"
temp-env = "0.3.6"
tempfile = "3.27.0"
test-log = "0.2.19"

[features]
default = []
_integration_tests = []
