[package]
name = "releasaurus"
version = "0.18.0-rc.1"
edition = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = "README.md"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "target/{ target }/release/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "releasaurus"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
git-url-parse = { workspace = true }
log = "0.4.29"
merge = "0.2.0"
releasaurus-core = { path = "../releasaurus-core", version = "0.18.0-rc.1" }
secrecy = { workspace = true }
serde = "1.0.228"
serde_json = "1.0.149"
simplelog = "0.12.2"
tokio = { version = "1.52.1", features = ["fs", "macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.27.0"
